--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -102,15 +102,9 @@ div[class^="announcementBar_"] .close {
   color: #FFF;
 }
 
-.navbar--dark {
-  box-shadow: 0 1px 2px 0 hsla(263, 100%, 100%, 0.9);
-  background: radial-gradient(
-    circle at 100%,
-    hsl(262, 94%, 20%) 2% 0%,
-    hsl(262, 49%, 13%) 15% 7%,
-    hsl(262, 94%, 24%) 47% 53%,
-    hsl(262, 49%, 13%) 80%
-  );
+.navbar, .navbar--dark, .navbar--primary {
+  background: rgba(10, 1, 24, 0.85) !important;
+  box-shadow: none !important;
 }
 
 .alert {
